Added pathlib package to Pipfile, and crime data import in CrimeClean.py

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,9 @@ pytest = "*"
 
 [packages]
 fastapi = "*"
-uvicorn = {extras = ["standard"], version = "*"}
+uvicorn = {extras = ["standard"],version = "*"}
 sqlalchemy = "*"
+pathlib = "*"
 
 [requires]
 python_version = "3"
