Added multiple packages to Pipfile Added CSV file to "raw" dataset, used for mapping fips to zips Add cleaned crime dataset to "clean" Added .env to .gitignore Final version of CleanCrime.py file added, it cleans crime datasets, and inserts the final cleaned crime dataset into the "clean" directory and into the database

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,12 @@ fastapi = "*"
 uvicorn = {extras = ["standard"],version = "*"}
 sqlalchemy = "*"
 pathlib = "*"
+pandas = "*"
+requests = "*"
+bs4 = "*"
+xlrd = "*"
+psycopg2 = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3"
