--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ cython_debug/
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# For database credentials
+*.env
